--- a/server/Front/_css/estilo.css
+++ b/server/Front/_css/estilo.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Ubuntu', sans-serif;
     margin: 0 auto;
     padding: 0%;
     background: #444;
@@ -14,7 +15,7 @@ nav img {
 }
 
 .form-control {
-    width: 1000px;
+    width: 950px;
 }
 
 main {
